# Kamal_SLAC

./: README.md
kamal_factor_graph/: CMakeLists.txt  README.md  main.cpp
kamal_factor_graph/dataset/: dataset_10.csv  dataset_2.csv  dataset_3.csv  dataset_6.csv  dataset_8.csv  dataset_9.csv  estimates_2 (copy).csv  estimates_2.csv  estimates_6.csv  estimates_7.csv  estimates_8.csv  estimates_9.csv  pose_initial_estimates_2.csv  pose_initial_estimates_6.csv  static_poses.csv  static_poses_10.csv  static_poses_6.csv  static_poses_7.csv
kamal_factor_graph/include/: KamalFactor.h  NonlinearFactor.h  model.h
kamal_factor_graph/include/sym/: kin_error_func_wrt_X_f.h  kin_error_func_wrt_a_3.h  kin_error_func_wrt_h_0.h  kin_error_func_wrt_k_0.h  kin_error_func_wrt_n_0.h  kin_error_func_wrt_pos_f.h  odo_error_func.h  odo_error_func_wrt_pos_f.h  odo_error_func_wrt_pos_i.h  odo_error_func_wrt_s.h
kamal_factor_graph/result/: FG_anchor_10.csv  FG_anchor_2.csv  FG_anchor_6.csv  FG_anchor_7.csv  FG_anchor_8.csv  FG_anchor_9.csv  FG_trajectory_10.csv  FG_trajectory_2.csv  FG_trajectory_6.csv  FG_trajectory_7.csv  FG_trajectory_8.csv  FG_trajectory_9.csv
kamal_factor_graph/verification/: Anchor_GT.csv  GT_pose_6.csv  cable.ipynb  calib.ipynb  encoder_6.csv  init.ipynb  initial_estimates_10.csv  initial_estimates_6.csv  initial_estimates_7.csv  initial_estimates_8.csv  perturb.csv  pose_GT_8.csv  verification.ipynb
system_model/: README.md  function_generator.ipynb  function_generator.py  function_generator_1.ipynb  test.py
system_model/cpp/symforce/sym/: kin_error_func.h  kin_error_func_wrt_X_f.h  kin_error_func_wrt_a_1.h  kin_error_func_wrt_a_2.h  kin_error_func_wrt_a_3.h  kin_error_func_wrt_a_4.h  kin_error_func_wrt_h_0.h  kin_error_func_wrt_k_0.h  odo_error_func.h  (+7 more)
(+8 files in other folders)
